--- a/estilogeral.css
+++ b/estilogeral.css
@@ -97,11 +97,11 @@ ul {
         display: none;
         flex-direction: column;
         background-color: #0099cc;
-        width: 100%;
+        width: 60%;
     }
 
     .menu li {
-        text-align: center;
+        text-align: left;
     }
 
     .menu li a {
